force-app/main/default/objects/Contact/fields/Audit_Family__c.field-meta.xml
<CustomField>
    <fullName>Audit_Family__c</fullName>
    <label>Audit Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pink</fullName>
            </value>
            <value>
                <fullName>Purple</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>