force-app/main/default/objects/Contact/fields/Contact_added_to_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Contact_added_to_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact added to Campaign</label>
    <type>Checkbox</type>
</CustomField>