force-app/main/default/objects/Contact/fields/Current_How_are_we_doing__c.field-meta.xml
<CustomField>
    <fullName>Current_How_are_we_doing__c</fullName>
    <label>How are we doing?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>