force-app/main/default/objects/Contact/fields/Field_Advocacy_Survey_Send_Month_Calc__c.field-meta.xml
<CustomField>
    <fullName>Field_Advocacy_Survey_Send_Month_Calc__c</fullName>
    <formula>ADDMONTHS(Account.Year_End_Date__c,10)</formula>
    <label>Field Advocacy Survey Send Month Calc</label>
    <type>Date</type>
</CustomField>