force-app/main/default/objects/Contact/fields/How_likely_is_it_you_would_recommend_CP__c.field-meta.xml
<CustomField>
    <fullName>How_likely_is_it_you_would_recommend_CP__c</fullName>
    <label>Current - NPS Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>