force-app/main/default/objects/Contact/fields/Mail_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Mail_Account_Name__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail Account Name</label>
    <type>Text</type>
</CustomField>