force-app/main/default/objects/Contact/fields/Score_Type__c.field-meta.xml
<CustomField>
    <fullName>Score_Type__c</fullName>
    <formula>IF(ISBLANK(How_likely_is_it_you_would_recommend_CP__c), NULL, 
    CASE(
        How_likely_is_it_you_would_recommend_CP__c,
        0, &quot;Detractor&quot;,
        1, &quot;Detractor&quot;,
        2, &quot;Detractor&quot;,
        3, &quot;Detractor&quot;,
        4, &quot;Detractor&quot;,
        5, &quot;Detractor&quot;,
        6, &quot;Detractor&quot;,
        7, &quot;Passive&quot;,
        8, &quot;Passive&quot;,
        9, &quot;Promoter&quot;,
        10, &quot;Promoter&quot;,
        &quot;&quot;
    )
)</formula>
    <label>Score Type</label>
    <type>Text</type>
</CustomField>