force-app/main/default/objects/Contact/fields/Should_be_sent_survey__c.field-meta.xml
<CustomField>
    <fullName>Should_be_sent_survey__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Should be sent survey</label>
    <type>Checkbox</type>
</CustomField>