force-app/main/default/objects/Contact/fields/Tell_us_why_you_ve_chosen_this_rating__c.field-meta.xml
<CustomField>
    <fullName>Tell_us_why_you_ve_chosen_this_rating__c</fullName>
    <inlineHelpText>What have we done well? How can we improve?</inlineHelpText>
    <label>Tell us why you&apos;ve chosen this rating</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>