force-app/main/default/objects/Contact/recordTypes/CRM_Contact.recordType-meta.xml
<RecordType>
    <fullName>CRM_Contact</fullName>
    <active>true</active>
    <label>CRM Contact</label>
</RecordType>