force-app/main/default/objects/Contact/validationRules/System_Administrator_edit_only.validationRule-meta.xml
<ValidationRule>
    <fullName>System_Administrator_edit_only</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISNEW()),
 NOT($Profile.Name = &apos;System Administrator&apos;)
)</errorConditionFormula>
    <errorMessage>Please contact Tech Support for any amendments to contact details.</errorMessage>
</ValidationRule>